feat: implement all business logic as required

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,3 +1,6 @@
 # Database connection URL, according to MongoDB's standard connection string format.
-# Example: "mongodb+srv://my-database-username:D1fficultP%40ssw0rd@cluster0.example.mongodb.net/my-database?retryWrites=true&w=majority&appName=my-app"
+# Example: "mongodb+srv://username:password@cluster0.example.mongodb.net/myDB?retryWrites=true&w=majority"
 DATABASE_URL="mongodb+srv://USERNAME:PASSWORD@HOST:PORT/DATABASE[?OPTIONS]"
+
+# JWT secret key for signing tokens
+JWT_SECRET="JWT_SECRET"
