--- a/package.json
+++ b/package.json
@@ -10,20 +10,22 @@
   "scripts": {
     "commit": "commit",
     "deploy": "",
-    "dev": "node --watch --env-file=.env.development --env-file=.env.local --experimental-strip-types=true --experimental-transform-types=true ./src/server.ts",
+    "dev": "node --watch --env-file=.env.development --env-file=.env.local --experimental-strip-types=true ./src/server.ts",
     "format": "prettier --write --cache . && prisma format",
     "format:check": "prettier --check --cache . && prisma format --check",
     "lint": "eslint --max-warnings=0 .",
-    "start": "node --experimental-strip-types=true --experimental-transform-types=true ./src/server.ts",
-    "test": "node --test --experimental-strip-types=true --experimental-transform-types=true",
+    "start": "node --experimental-strip-types=true ./src/server.ts",
+    "test": "node --test --experimental-strip-types=true",
     "typecheck": "tsc"
   },
   "dependencies": {
     "@date-fns/utc": "2.1.0",
+    "@fastify/auth": "5.0.2",
     "@fastify/autoload": "6.2.0",
     "@fastify/cors": "11.0.1",
     "@fastify/env": "5.0.2",
     "@fastify/helmet": "13.0.1",
+    "@fastify/jwt": "9.1.0",
     "@fastify/swagger": "9.4.2",
     "@fastify/swagger-ui": "5.2.2",
     "@fastify/type-provider-typebox": "5.1.0",
@@ -81,5 +83,8 @@
   "packageManager": "pnpm@10.7.1+sha512.2d92c86b7928dc8284f53494fb4201f983da65f0fb4f0d40baafa5cf628fa31dae3e5968f12466f17df7e97310e30f343a648baea1b9b350685dafafffdf5808",
   "engines": {
     "node": "22.14.0"
+  },
+  "prisma": {
+    "seed": "node --experimental-strip-types=true ./prisma/seed.ts"
   }
 }
