--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "dev": "node --watch --env-file=.env.development --env-file=.env.local --experimental-strip-types=true ./src/server.ts",
     "format": "prettier --write --cache . && prisma format",
     "format:check": "prettier --check --cache . && prisma format --check",
+    "lefthook": "lefthook",
     "lint": "eslint --max-warnings=0 .",
     "start": "node --experimental-strip-types=true ./src/server.ts",
     "test": "node --test --experimental-strip-types=true",
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@date-fns/utc": "2.1.0",
     "@fastify/auth": "5.0.2",
     "@fastify/autoload": "6.2.0",
     "@fastify/cors": "11.0.1",
@@ -33,11 +33,7 @@
     "@sinclair/typebox": "0.34.33",
     "date-fns": "4.1.0",
     "fastify": "5.2.2",
-    "fastify-plugin": "5.0.1",
-    "openai": "4.91.1",
-    "remeda": "2.21.2",
-    "string-ts": "2.2.1",
-    "zod": "3.24.2"
+    "fastify-plugin": "5.0.1"
   },
   "devDependencies": {
     "@commitlint/cli": "19.8.0",
