refactor(eslint): enable new `unstable_native_nodejs_ts_config` feature flag & remove "jiti" package

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "format": "prettier --write --cache . && prisma format",
     "format:check": "prettier --check --cache . && prisma format --check",
     "lefthook": "lefthook",
-    "lint": "eslint --max-warnings=0 .",
+    "lint": "pnpm --node-options=--experimental-strip-types eslint --max-warnings=0 --flag=unstable_native_nodejs_ts_config .",
     "start": "node --experimental-strip-types=true ./src/server.ts",
     "test": "node --test --experimental-strip-types=true",
     "typecheck": "tsc"
@@ -65,7 +65,6 @@
     "eslint-plugin-unicorn": "58.0.0",
     "eslint-plugin-yml": "1.17.0",
     "eslint-typegen": "2.1.0",
-    "jiti": "2.4.2",
     "knip": "5.46.5",
     "lefthook": "1.11.6",
     "prettier": "3.5.3",
