--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "name": "task-manager-backend",
   "version": "0.0.0",
   "private": true,
+  "description": "",
   "type": "module",
   "imports": {
     "#*": "./src/*"
