--- a/knip.jsonc
+++ b/knip.jsonc
@@ -1,15 +1,16 @@
 {
   "$schema": "https://unpkg.com/knip@5/schema-jsonc.json",
-  "entry": [
+  "entry":
     // Route files detected by `@fastify/autoload`
     "src/routes/**/*.ts",
-  ],
   "ignoreDependencies": [
     // Used implicitly by Prisma
     "@prisma/client",
   ],
   "node": {
-    "entry": "**/*.test.ts",
+    "entry":
+      // Test files detected by Node test runner
+      "**/*.test.ts",
   },
   "treatConfigHintsAsErrors": true,
 }
