--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
     "skipLibCheck": true,
     "strict": true,
     "target": "ESNext",
+    "types": ["node"],
     "verbatimModuleSyntax": true
   },
   "exclude": ["src/generated"],
