feat: minor general improvements

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,6 @@
     "types": ["node"],
     "verbatimModuleSyntax": true
   },
-  "exclude": ["src/generated"],
+  "exclude": ["**/generated/prisma"],
   "include": ["**/*", ".dependency-cruiser.js"]
 }
