--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "#*": "./src/*"
   },
   "scripts": {
+    "check-spelling": "cspell --no-progress --show-context .",
     "commit": "commit",
     "deploy": "",
     "dev": "node --watch --env-file=.env.development --env-file=.env.local --experimental-strip-types=true ./src/server.ts",
@@ -48,6 +49,7 @@
     "@eslint/js": "9.27.0",
     "@eslint/markdown": "6.4.0",
     "@types/node": "22.15.24",
+    "cspell": "9.0.2",
     "dependency-cruiser": "16.10.2",
     "eslint": "9.27.0",
     "eslint-config-flat-gitignore": "2.1.0",
