--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
   },
   "scripts": {
     "check-spelling": "cspell --no-progress --show-context .",
-    "commit": "commit",
     "deploy": "",
     "dev": "node --watch --env-file=.env.development --env-file=.env.local --experimental-strip-types=true ./src/server.ts",
     "format": "prettier --write --cache . && prisma format",
     "format:check": "prettier --check --cache . && prisma format --check",
+    "git-commit": "commit",
     "lefthook": "lefthook",
     "lint": "pnpm --node-options=--experimental-strip-types=true eslint --max-warnings=0 --flag=unstable_native_nodejs_ts_config .",
-    "lint:commit": "commitlint --from=HEAD~1 --to=HEAD --verbose",
-    "lint:depcruise": "depcruise .",
+    "lint:commit-message": "commitlint --edit && cspell --no-progress --no-summary .git/COMMIT_EDITMSG",
+    "lint:dependency-cruiser": "depcruise .",
     "lint:syncpack": "syncpack lint",
     "start": "node --experimental-strip-types=true ./src/server.ts",
     "test": "node --test --experimental-strip-types=true",
