chore(prisma): modify the output path of Prisma client

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "description": "",
   "type": "module",
   "imports": {
+    "#generated/*": "./generated/*",
     "#*": "./src/*"
   },
   "scripts": {
