--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,7 @@
   "recommendations": [
     "dbaeumer.vscode-eslint",
     "esbenp.prettier-vscode",
+    "github.vscode-github-actions",
     "prisma.prisma",
     "streetsidesoftware.code-spell-checker",
     "streetsidesoftware.code-spell-checker-british-english"
