--- a/knip.jsonc
+++ b/knip.jsonc
@@ -1,5 +1,5 @@
 {
-  "$schema": "https://unpkg.com/knip@5/schema-jsonc.json",
+  "$schema": "https://unpkg.com/knip@latest/schema-jsonc.json",
   "entry":
     // Route files detected by `@fastify/autoload`
     "src/routes/**/*.ts",
