--- a/package.json
+++ b/package.json
@@ -11,17 +11,17 @@
   },
   "scripts": {
     "check-spelling": "cspell --no-progress --show-context .",
-    "dev": "node --watch --env-file=.env.development --env-file=.env.local --experimental-strip-types ./src/server.ts",
+    "dev": "node --watch --env-file=.env.development --env-file=.env.local ./src/server.ts",
     "format": "prettier --write --cache . && prisma format",
     "format:check": "prettier --check --cache . && prisma format --check",
     "git-commit": "commit",
     "lefthook": "lefthook",
-    "lint": "pnpm --node-options=--experimental-strip-types eslint --max-warnings=0 --flag=unstable_native_nodejs_ts_config .",
+    "lint": "eslint --max-warnings=0 --flag=unstable_native_nodejs_ts_config .",
     "lint:commit-message": "commitlint --edit && cspell --no-progress --no-summary .git/COMMIT_EDITMSG",
     "lint:dependency-cruiser": "depcruise .",
     "lint:syncpack": "syncpack lint",
-    "start": "node --experimental-strip-types ./src/server.ts",
-    "test": "node --test --experimental-strip-types",
+    "start": "node ./src/server.ts",
+    "test": "node --test",
     "typecheck": "tsc"
   },
   "dependencies": {
