fix(eslint): fix error triggered by the empty "description" value within `package.json`

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "task-manager-backend",
   "version": "0.0.0",
   "private": true,
-  "description": "",
+  "description": "Backend for the task manager application",
   "type": "module",
   "imports": {
     "#generated/*": "./generated/*",
