fix(eslint): resolve issue where the official VSCode extension would not validate TypeScript files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,9 +27,9 @@
   "eslint.validate": [
     "github-actions-workflow",
     "javascript",
-    "javascriptreact",
     "json",
     "jsonc",
+    "typescript",
     "yaml"
   ],
   "files.encoding": "utf8",
