--- a/package.json
+++ b/package.json
@@ -35,10 +35,10 @@
     "@fastify/swagger-ui": "5.2.3",
     "@fastify/type-provider-typebox": "6.0.0",
     "@prisma/client": "6.16.2",
-    "@sinclair/typebox": "0.34.41",
     "date-fns": "4.1.0",
     "fastify": "5.6.0",
-    "fastify-plugin": "5.0.1"
+    "fastify-plugin": "5.0.1",
+    "typebox": "1.0.15"
   },
   "devDependencies": {
     "@commitlint/cli": "19.8.1",
