--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -5,6 +5,7 @@
     "github.vscode-github-actions",
     "prisma.prisma",
     "streetsidesoftware.code-spell-checker",
-    "streetsidesoftware.code-spell-checker-british-english"
+    "streetsidesoftware.code-spell-checker-british-english",
+    "webpro.vscode-knip"
   ]
 }
